# Skia

./: .gitignore  CHANGES  COMMIT  OPTIONS  README.md  install.sh  meson.build
headers/CZ/skia/codec/: SkAvifDecoder.h  SkGifDecoder.h  SkIcoDecoder.h  SkJpegDecoder.h  SkJpegxlDecoder.h  SkPngDecoder.h  SkWbmpDecoder.h  SkWebpDecoder.h
headers/CZ/skia/core/: SkBBHFactory.h  SkBlender.h  SkCPUContext.h  SkCPURecorder.h  SkCanvasVirtualEnforcer.h  SkColorTable.h  SkColorType.h  SkContourMeasure.h  SkDataTable.h  SkDocument.h  SkExecutor.h  SkFontMgr.h  SkFontParameters.h  SkFontScanner.h  SkFontStyle.h  SkGraphics.h  SkImageFilter.h  SkMallocPixelRef.h  SkMatrix.h  SkMesh.h  SkPaint.h  SkPathEffect.h  SkPathMeasure.h  SkPathUtils.h  SkPicture.h  SkPoint.h  SkRRect.h  SkRasterHandleAllocator.h  SkRecorder.h  SkRefCnt.h  SkSamplingOptions.h  SkSerialProcs.h  SkStream.h  SkString.h  SkStrokeRec.h  SkSwizzle.h  SkTiledImageUtils.h  SkUnPreMultiply.h  SkVertices.h  SkYUVAPixmaps.h
headers/CZ/skia/docs/: SkPDFDocument.h  SkPDFJpegHelpers.h  SkXPSDocument.h
headers/CZ/skia/effects/: Sk2DPathEffect.h  SkColorMatrixFilter.h  SkCornerPathEffect.h  SkDashPathEffect.h  SkDiscretePathEffect.h  SkGradientShader.h  SkHighContrastFilter.h  SkLumaColorFilter.h  SkOverdrawColorFilter.h
headers/CZ/skia/encode/: SkICC.h  SkJpegEncoder.h  SkWebpEncoder.h
headers/CZ/skia/gpu/: GpuTypes.h
headers/CZ/skia/pathops/: SkPathOps.h
headers/CZ/skia/ports/: SkCFObject.h  SkFontMgr_Fontations.h  SkFontMgr_android_ndk.h  SkFontMgr_data.h  SkFontMgr_fuchsia.h  SkTypeface_mac.h  (+5 more)
headers/skia/codec/: SkAndroidCodec.h  SkAvifDecoder.h  SkBmpDecoder.h  SkCodec.h  SkEncodedOrigin.h  SkGifDecoder.h  SkIcoDecoder.h  SkJpegDecoder.h  SkJpegxlDecoder.h  SkPixmapUtils.h  SkPngChunkReader.h  SkPngDecoder.h  SkRawDecoder.h  SkWbmpDecoder.h  SkWebpDecoder.h
headers/skia/core/: SkAnnotation.h  SkArc.h  SkBBHFactory.h  SkBitmap.h  SkBlendMode.h  SkBlender.h  SkCPUContext.h  SkCPURecorder.h  SkCanvas.h  SkCanvasVirtualEnforcer.h  SkCapabilities.h  SkClipOp.h  SkColor.h  SkColorFilter.h  SkColorSpace.h  SkColorTable.h  SkColorType.h  SkContourMeasure.h  SkCubicMap.h  SkData.h  SkDataTable.h  SkDocument.h  SkDrawable.h  SkExecutor.h  SkFlattenable.h  SkFont.h  SkFontArguments.h  SkFontMetrics.h  SkFontMgr.h  SkFontParameters.h  SkFontScanner.h  SkFontStyle.h  SkGraphics.h  SkImage.h  SkImageFilter.h  SkImageGenerator.h  SkImageInfo.h  SkM44.h  SkMallocPixelRef.h  SkMaskFilter.h  (+45 more)
headers/skia/docs/: SkMultiPictureDocument.h  SkPDFDocument.h  SkPDFJpegHelpers.h  SkXPSDocument.h
headers/skia/effects/: Sk1DPathEffect.h  Sk2DPathEffect.h  SkBlenders.h  SkBlurMaskFilter.h  SkColorMatrix.h  SkColorMatrixFilter.h  SkCornerPathEffect.h  SkDashPathEffect.h  SkDiscretePathEffect.h  SkGradientShader.h  SkHighContrastFilter.h  SkImageFilters.h  SkLumaColorFilter.h  SkOverdrawColorFilter.h  SkPerlinNoiseShader.h  SkRuntimeEffect.h  SkShaderMaskFilter.h  SkTableMaskFilter.h  SkTrimPathEffect.h
headers/skia/encode/: SkEncoder.h  SkICC.h  SkJpegEncoder.h  SkPngEncoder.h  SkWebpEncoder.h
headers/skia/gpu/: GpuTypes.h  MutableTextureState.h  ShaderErrorHandler.h
headers/skia/pathops/: SkPathOps.h
headers/skia/ports/: SkCFObject.h  SkFontConfigInterface.h  SkFontMgr_FontConfigInterface.h  SkFontMgr_Fontations.h  SkFontMgr_android.h  SkFontMgr_android_ndk.h  SkFontMgr_data.h  SkFontMgr_directory.h  SkFontMgr_empty.h  SkFontMgr_fontconfig.h  SkFontMgr_fuchsia.h  SkFontMgr_mac_ct.h  SkFontScanner_Fontations.h  SkFontScanner_FreeType.h  SkImageGeneratorCG.h  SkImageGeneratorNDK.h  SkImageGeneratorWIC.h  SkTypeface_fontations.h  SkTypeface_mac.h  SkTypeface_win.h
headers/skia/private/: SkEncodedInfo.h  SkExif.h  SkGainmapInfo.h  SkGainmapShader.h  SkIDChangeListener.h  SkJpegGainmapEncoder.h  SkJpegMetadataDecoder.h  SkPathRef.h  SkSLSampleUsage.h  SkWeakRefCnt.h  SkXmp.h
headers/skia/sksl/: SkSLDebugTrace.h
headers/skia/svg/: SkSVGCanvas.h
headers/skia/utils/: SkCamera.h  SkCanvasStateUtils.h  SkCustomTypeface.h  SkEventTracer.h  SkNWayCanvas.h  SkNoDrawCanvas.h  SkNullCanvas.h  SkOrderedFontMgr.h  SkPaintFilterCanvas.h  SkParse.h  SkParsePath.h  SkShadowUtils.h  SkTextUtils.h
modules/: meson.build
modules/svg/: meson.build
modules/svg/src/: SkAnimCodecPlayer.cpp  SkAutoPixmapStorage.cpp  SkBase64.cpp  SkCodecImageGenerator.cpp  SkDOM.cpp  SkOSFile_posix.cpp  SkOSFile_stdio.cpp  SkOSPath.cpp  SkResources.cpp  SkSVGAttribute.cpp  SkSVGAttributeParser.cpp  SkSVGCircle.cpp  SkSVGClipPath.cpp  SkSVGContainer.cpp  SkSVGDOM.cpp  SkSVGEllipse.cpp  SkSVGFe.cpp  SkSVGFeBlend.cpp  SkSVGFeColorMatrix.cpp  SkSVGFeComponentTransfer.cpp  SkSVGFeComposite.cpp  SkSVGFeDisplacementMap.cpp  SkSVGFeFlood.cpp  SkSVGFeGaussianBlur.cpp  SkSVGFeImage.cpp  SkSVGFeLightSource.cpp  SkSVGFeLighting.cpp  SkSVGFeMerge.cpp  SkSVGFeMorphology.cpp  SkSVGFeOffset.cpp  SkSVGFeTurbulence.cpp  SkSVGFilter.cpp  SkSVGFilterContext.cpp  SkSVGGradient.cpp  SkSVGImage.cpp  SkSVGLine.cpp  SkSVGLinearGradient.cpp  SkSVGMask.cpp  SkSVGNode.cpp  SkSVGOpenTypeSVGDecoder.cpp  (+17 more)
pkg/: instructions.txt
pkg/fedora/: latest.spec  template.spec
src/codec/: SkCrabbyAvifCodec.cpp  SkCrabbyAvifCodec.h  SkJpegxlCodec.cpp  SkJpegxlCodec.h
src/gpu/ganesh/: GrCanvas.cpp
src/sksl/: SkSLModuleDataFile.cpp
utils/old_installer/: install.sh
(+668 files in other folders)
